--- a/index.html
+++ b/index.html
@@ -11,9 +11,62 @@
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
   <![endif]-->
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 
 <body>
-  <h1>My Resume</h1>
+    <header class="nav-top">
+      <nav>
+        <a href="#intro">Intro</a>
+        <a href="#skills">Skills</a>
+        <a href="#work">Work</a>
+        <a href="#contact">Contact</a>
+        <a href="#top">About</a>
+      </nav>
+    </header>
+    <div class="top" id="top">
+      <section class="headshot">
+          <img src="images/heashot.jpg" alt="professional headshot of a male"/>
+          <h1 class="text">Cole Wilkison</h1>
+          <p>Full Stack Web Developer</p>
+      </section>
+     <section class="intro" id="intro">
+       <div>
+        <h1>Intro</h1>
+        <p>My Name is Cole Wilkison. I live in Charlotte, North Carolina and I am a Full Stack Web Developer.</p>
+       </div>
+       <div>
+         <h3>Lorem Ipsum</h3>
+         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.</p>
+       </div>
+      </section>
+    </div>
+  <section class="content">
+    <div class="skills" id="skills">
+      <h3>SKILLS</h3>
+      <ul>
+        <li>CSS</li>
+        <li>HTML</li>
+        <li>Python</li>
+        <li>Github and Bash</li>
+        <li>Microsoft Office</li>
+      </ul>
+    </div>
+    <div class="work" id="work">
+      <h3>WORK</h3>
+      <ul>
+        <li>I have worked maintence at Charlotte Preparatory School.</li>
+        <li>I taught tennis at Palisades Country Club.</li>
+        <li>I have sold used cars as an independent dealer.</li>
+        <li>I helped highschoolers recieve athletic scholarships to play in college.</li>
+      </ul>
+    </div>
+  </section>
+  <footer class="contact" id="contact">
+    <h3>CONTACT</h3>
+    <p>5903 Laurium Road Charlotte, NC<br>(704) 975-7303<br>wilkison.cole@gmail.com</p>
+  </footer>
 </body>
 </html>
